Fix why us box spacing

--- a/css/index.css
+++ b/css/index.css
@@ -97,16 +97,14 @@ header.masthead {
   text-align: center;
 }
 
-.margins{
-  margin-left: 5px;
-  margin-right: 5px;
+.why-us{
+  padding-bottom: 50px;
 }
 
-.margins2{
+.why-us-box{
   margin-left: 5px;
   margin-right:5px;
-  margin-top: 50px;
-  margin-bottom: 130px;
+  margin-bottom: 50px;
 }
 
 .padding{
